--- a/app/src/main/res/layout/frontpagexml.xml
+++ b/app/src/main/res/layout/frontpagexml.xml
@@ -10,10 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     >
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="rofl"
+    <WebView
+        android:layout_width="match_parent"
+        android:id="@+id/webView"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         />
+
 </RelativeLayout>
